fixed icon vertical align

--- a/templates/default-bulma/static/styles/style.css
+++ b/templates/default-bulma/static/styles/style.css
@@ -31,5 +31,5 @@ div#auth_container {
 */
 
 table span.icon {
-    line-height: 22px !important;
+    line-height: 23px !important;
 }
